[package]
name = "rload"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false }
rand = "0.8"
clap = { version = "3", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
rand_distr = "0.4"
csv = "1"
byteorder = "1.5"
